--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <script src="scripts/initial.js"></script>
     
     <script src="scripts/PulseAnimation.js"></script>
-    <script src="scripts/SpriteAnimation.js"></script>
+    <script src="scripts/Sprite.js"></script>
     
     <script src="scripts/AthleticMusic.js"></script>
     <script src="scripts/OverworldMusic.js"></script>
