--- a/index.html
+++ b/index.html
@@ -2,8 +2,11 @@
 <html>
 <head>
     <meta charset="UTF-8">
-    <title>Mario Sprites</title>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="">
     <link rel="stylesheet" href="style.css">
+    <title>Koopas and Goombas</title>
 </head>
 <body>
     <div class="container">
