Display BAH! text on bah

--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
 
     <script src="scripts/Pulse.js"></script>
     <script src="scripts/BeatPulser.js"></script>
+    <script src="scripts/BahText.js"></script>
 
     <script src="scripts/Sprite.js"></script>
     <script src="scripts/Music.js"></script>
